# Logos

./: .gitignore  README.md  check_embedding_dim.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8fc3d6eb8ae8_initial_migration.py  ae2f49d9f074_add_gin_indexes_for_jsonb.py
backend/agents/: coach_agent.py  code_agent.py  gm_agent.py  lobby_agent.py  rag_engine.py  researcher_agent.py  tools.py  writer_agent.py
backend/database/: db_init.py  models.py
backend/gateway/: api.py  lifecycle.py
backend/graph/: state.py
backend/ingest/: engine.py
backend/plugins/: __init__.py  bitd_plugin.py  coc_plugin.py
backend/tools/: character_manager.py  glossary.py  test_character_db.py
backend/utils/: agent_factory.py  ingestion.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue
infra/: .env.example  Dockerfile  backend_bridge.py  docker-compose.yml  litellm_config.yaml
scripts/: bootstrap.py  init.sh  init_checkpoints.py  reset_db.py
scripts/debug/: check_embedding_dim.py  check_import.py  docker_debug.txt
src/: main.py  test_client.py
src/agents/: coach_agent.py  code_agent.py  gm_agent.py  rag_engine.py  researcher_agent.py  tools.py  writer_agent.py
src/database/: db_init.py  models.py
tests/: conftest.py  test_code_rag.py  test_editor_integration.py  test_full_stack.py  test_gemini_distill.py  test_glossary.py  test_gm_agent.py  test_routing.py  test_semantic_editor.py  test_state_persistence.py  test_writer_acceptance.py  test_writer_flow.py
(+31 files in other folders)
